--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <a href="https://www.linkedin.com/feed/?trk=homepage-basic_google-one-tap-submit" target="_blank"><img src="./img/LinkedIn-Icon.png" alt="linkdien-icon" /></a>
     </div>
     <div>&copy;
-      <script src="js/date.js"></script> Leonardo C. Benedito 
+      <script src="script/date.js"></script> Leonardo C. Benedito 
   </div>
   </footer>
     
