--- a/index.html
+++ b/index.html
@@ -8,31 +8,47 @@
 </head>
 <body>
   <header>
-    <nav class="nav">
-      <a href="#about">ABOUT</a>
-      <a href="#project">PROJECTS</a>
-      <a href="#footer">CONTACT</a>
-    </nav>
   </header>
   <main>
     <section class="about">
         <div class="dev-info">
-          <h1>I'm Web Developer</h1>
+          <h1>I'm a Web Developer Student</h1>
           <h2>About me</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum scelerisque nec lectus dapibus convallis. Proin vestibulum nunc eu vulputate volutpat. Morbi lacinia ultricies dui. Donec elit ex, consequat ut mi in, finibus cursus nulla. Curabitur at justo efficitur, condimentum ante vitae, tincidunt nisl. Pellentesque in magna mattis justo aliquet lacinia. Quisque varius ac libero sit amet mattis. Nullam vitae elit nunc. Pellentesque ac sapien feugiat nunc bibendum lobortis vitae nec est. Aenean in velit eget magna ullamcorper dictum tincidunt vitae lectus.
+            Hello this is my portfolio, I am studying web development and here you can see some of my work developed, more details at the bottom of the site, where my gitHub and linkdien are.
           </p>
         </div>
         <img src="img/Web-Development.png" alt="dev" />
       </section>
       <section class="project">
-        <div class="project-info">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum scelerisque nec lectus dapibus convallis. Proin vestibulum nunc eu vulputate volutpat. Morbi lacinia ultricies dui. Donec elit ex, consequat ut mi in, finibus cursus nulla. Curabitur at justo efficitur, condimentum ante vitae, tincidunt nisl. Pellentesque in magna mattis justo aliquet lacinia. Quisque varius ac libero sit amet mattis. Nullam vitae elit nunc. Pellentesque ac sapien feugiat nunc bibendum lobortis vitae nec est. Aenean in velit eget magna ullamcorper dictum tincidunt vitae lectus.
-          </p>
-          <a href="">Repository</a>
+        <div class="card">
+          <iframe width="580" height="315" src="https://www.youtube.com/embed/wjqQx8sD968" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="card-info">
+            <p>
+              Project developed during the web development training course, it used class components, and Redux for managing the states.
+              the project has the function of converting expenses in different currencies to the Brazilian real.
+            </p>
+            <a class="link-card" href="https://github.com/LeonardoCavachini/Projetos-Trybe/tree/main/sd-06-project-trybewallet" target="_blank">Repository</a>
+          </div>
         </div>
-        <img src="./img/app_library.png" alt="photo-project" />
+        <div class="card">
+          <iframe width="580" height="315" src="https://www.youtube.com/embed/CSjhMTsqklg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="card-info">
+          <p>
+            In this Project we can through a request to an API, we render products and through the quantity we calculate the final value in case you make a purchase.
+          </p>
+          <a class="link-card" href="https://github.com/LeonardoCavachini/Projetos-Trybe/tree/main/sd-06-project-frontend-online-store" target="_blank">Repository</a>
+        </div>
+      </div>
+      <div class="card">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vUGHZy3tBo0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="card-info">
+        <p>
+          In this Project we can through a request to an API, we render recipes for drinks and food, we used the functional components and hooks of react and contextAPI to manage the state.
+        </p>
+        <a class="link-card" href="https://github.com/LeonardoCavachini/Projetos-Trybe/tree/main/sd-06-project-recipes-app" target="_blank">Repository</a>
+      </div>
+    </div>
       </section>
   </main>
   <footer class="footer" >
