--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rosario:wght@300&family=Sansita+Swashed:wght@500&family=Sora&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
@@ -12,10 +16,13 @@
   <main>
     <section class="about">
         <div class="dev-info">
-          <h1>I'm a Web Developer Student</h1>
-          <h2>About me</h2>
+          <h1>Estudante de desenvolvimento web</h1>
+          <h2>Sobre mim</h2>
           <p>
-            Hello this is my portfolio, I am studying web development and here you can see some of my work developed, more details at the bottom of the site, where my gitHub and linkdien are.
+            Olá, me chamo Leonardo cavachini e este é o meu portifolio, sou estudante de 
+            desenvolvimento web na Trybe, e aqui você pode
+            ver alguns dos meus projetos desenvolvidos ao 
+            longo do curso.
           </p>
         </div>
         <img src="img/Web-Development.png" alt="dev" />
@@ -25,8 +32,8 @@
           <iframe width="580" height="315" src="https://www.youtube.com/embed/wjqQx8sD968" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <div class="card-info">
             <p>
-              Project developed during the web development training course, it used class components, and Redux for managing the states.
-              the project has the function of converting expenses in different currencies to the Brazilian real.
+              Este projeto tem como finalidade converter moedas para a moeda brasileira(Real),
+              através de despesas, no caso você adiciona uma despesa em qualquer moeda, que le faz a soma e conversão para o Real, foi utilizado o Redux para gerenciar o estado, do componente funcional.
             </p>
             <a class="link-card" href="https://github.com/LeonardoCavachini/Projetos-Trybe/tree/main/sd-06-project-trybewallet" target="_blank">Repository</a>
           </div>
@@ -35,7 +42,7 @@
           <iframe width="580" height="315" src="https://www.youtube.com/embed/CSjhMTsqklg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="card-info">
           <p>
-            In this Project we can through a request to an API, we render products and through the quantity we calculate the final value in case you make a purchase.
+            Este projeto renderiza produtos atraves de uma requisição de API, assim podemos adicionar em um carrinho e fazer a soma dos seus produtos.
           </p>
           <a class="link-card" href="https://github.com/LeonardoCavachini/Projetos-Trybe/tree/main/sd-06-project-frontend-online-store" target="_blank">Repository</a>
         </div>
@@ -44,7 +51,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/vUGHZy3tBo0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <div class="card-info">
         <p>
-          In this Project we can through a request to an API, we render recipes for drinks and food, we used the functional components and hooks of react and contextAPI to manage the state.
+          Neste projeto nós temos uma serie de receitas sejam elas de bebidas e comidas onde e renderizado através de uma requisição API, foi utilizado o contextAPI para gerenciamento de estados.
         </p>
         <a class="link-card" href="https://github.com/LeonardoCavachini/Projetos-Trybe/tree/main/sd-06-project-recipes-app" target="_blank">Repository</a>
       </div>
